addons/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: kubernetes-dashboard-ingress
 namespace: kube-system
 annotations:
   kubernetes.io/ingress.class: traefik
#   ingress.kubernetes.io/auth-type: basic
#   ingress.kubernetes.io/auth-secret: traefik-dashboard-auth
#   ingress.kubernetes.io/auth-realm: "traefik"
spec:
  rules:
  - host: "dashboard.service.teecu.be"
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
